<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context="hu.ait.android.footballfixtures.TableFragment">

    <Spinner
        android:id="@+id/spinnerCompetitions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:textColor="@color/primary_text" />

    <LinearLayout
        android:id="@+id/tableLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTeamName"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="@color/primary_text" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pj"
            android:textColor="@color/primary_text" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gf"
            android:textColor="@color/primary_text" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ga"
            android:textColor="@color/primary_text" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dif"
            android:textColor="@color/primary_text" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pts"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tableLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:listDivider"
            android:dividerPadding="2.5sp"
            android:orientation="vertical"
            android:showDividers="middle"
            android:weightSum="2" />

    </ScrollView>

</LinearLayout>
